--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,33 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.onion99.android.App"
+        android:name="com.onion.android.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.onion99.android.kotlin.ui.MainActivityKt">
+        android:theme="@style/AppPlexTheme">
+<!--        <activity android:name="com.onion.android.kotlin.ui.MainActivityKt">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.onion99.android.ui.dialog.MaterialDialogActivity" />
+        <activity android:name="com.onion.android.ui.dialog.MaterialDialogActivity" />
         <activity
-            android:name="com.onion99.android.MainActivity"
+            android:name="com.onion.android.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.StudyInXmiles.NoActionBar">
+        </activity>-->
+        <activity android:name=".app.plex.ui.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
