--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,44 +1,51 @@
 ext.versions = [
 
         // gradle plugins
-        gradleBuildTool      : '4.1.1',
-        spotlessGradle       : '5.8.2',
-        versionPlugin        : '0.28.0',
+        gradleBuildTool        : '4.1.1',
+        spotlessGradle         : '5.8.2',
+        versionPlugin          : '0.28.0',
 
         // kotlin
-        kotlin_version : '1.4.20',
+        kotlin_version         : '1.4.20',
 
-        lifecycleVersion  : '2.2.0',
-        roomVersion          : '2.3.0-alpha03',
-        dagger            : '2.30.1',
-        espresso          : '3.0.2',
+        lifecycleVersion       : '2.2.0',
+        roomVersion            : '2.3.0-alpha03',
+        dagger                 : '2.30.1',
+        espresso               : '3.0.2',
 
         // hilt
-        hiltCoreVersion      : '2.31-alpha',
-        hiltVersion          : '1.0.0-alpha02',
-        assistedInjectVersion: '0.5.2',
+        hiltCoreVersion        : '2.31-alpha',
+        hiltVersion            : '1.0.0-alpha02',
+        assistedInjectVersion  : '0.5.2',
 
         // network
-        retrofitVersion      : '2.9.0',
-        okhttpVersion        : '4.9.0',
+        retrofitVersion        : '2.9.0',
+        okhttpVersion          : '4.9.0',
 
         // ui
-        transformationLayout : '1.0.4',
-        glideVersion         : '4.11.0',
-        glidePaletteVersion  : '2.1.2',
-        rainbowVersion       : '1.0.3',
-        baseAdapter          : '0.1.3',
+        transformationLayout   : '1.0.4',
+        glideVersion           : '4.11.0',
+        glidePaletteVersion    : '2.1.2',
+        rainbowVersion         : '1.0.3',
+        baseAdapter            : '0.1.3',
 
         // debugging
-        timberVersion        : '4.7.1',
+        timberVersion          : '4.7.1',
 
         // moshi
-        moshiVersion         : '1.11.0',
-        moshiConverterVersion: '2.7.2',
+        moshiVersion           : '1.11.0',
+        moshiConverterVersion  : '2.7.2',
 
         // netcipher
-        netcipherVersion     : '2.1.0',
+        netcipherVersion       : '2.1.0',
         netcipherOkhttpVersion : '2.0.0-alpha1',
-        netcipherWebViewVersion: '2.0.0-alpha1'
+        netcipherWebViewVersion: '2.0.0-alpha1',
+
+        // ExoPlayer
+        exoplayerversion       : '2.11.7',
+        mediarouter            : '1.2.2'
+
+
+
 
 ]
