--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,10 +124,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation "androidx.paging:paging-runtime:2.1.2"
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    // UI Widget
+    implementation 'me.relex:circleindicator:2.1.6'
     // Reactive Programming
     implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroidVersion}"
     implementation "io.reactivex.rxjava3:rxjava:${versions.rxjavaVersion}"
