--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,6 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppPlexTheme">
-<!--        <activity android:name="com.onion.android.kotlin.ui.MainActivityKt">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="com.onion.android.ui.dialog.MaterialDialogActivity" />
-        <activity
-            android:name="com.onion.android.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.StudyInXmiles.NoActionBar">
-        </activity>-->
         <activity android:name=".app.plex.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,8 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.plex.ui.MainActivity">
-        </activity>
+        <activity android:name=".app.plex.ui.MainActivity" />
     </application>
 
 </manifest>
