--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,18 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppPlexTheme">
-        <activity
-            android:name=".app.plex.ui.SplashActivity"
-            android:theme="@style/SplashTheme">
+        <!--        <activity
+                    android:name=".app.plex.ui.SplashActivity"
+                    android:theme="@style/SplashTheme">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>       -->
+        <activity android:name=".app.pokemon.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
