--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,23 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppPlexTheme">
-        <!--        <activity
-                    android:name=".app.plex.ui.SplashActivity"
-                    android:theme="@style/SplashTheme">
-                    <intent-filter>
-                        <action android:name="android.intent.action.MAIN" />
+        <!--                <activity
+                            android:name=".app.plex.ui.PlexSplashActivity"
+                            android:theme="@style/SplashTheme">
+                            <intent-filter>
+                                <action android:name="android.intent.action.MAIN" />
 
-                        <category android:name="android.intent.category.LAUNCHER" />
-                    </intent-filter>
-                </activity>       -->
-        <activity android:name=".app.pokemon.ui.MainActivity">
+                                <category android:name="android.intent.category.LAUNCHER" />
+                            </intent-filter>
+                        </activity>-->
+        <activity android:name=".app.pokemon.ui.PokedexMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".app.plex.ui.MainActivity"
+            android:name=".app.plex.ui.PlexMainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
