--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppPlexTheme"
         android:usesCleartextTraffic="true">
-        <activity
+        <!--<activity
             android:name=".app.material.owl.ui.OwlMainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.pokemon.ui.PokedexMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>-->
         <activity
             android:name=".app.plex.ui.PlexSplashActivity"
             android:theme="@style/SplashTheme">
@@ -33,14 +39,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--
-<activity android:name=".app.pokemon.ui.PokedexMainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
         <activity
             android:name=".app.plex.ui.PlexMainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
