--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,7 +154,7 @@ dependencies {
      */
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    //implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
@@ -188,9 +188,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$versions.roomVersion"
     kapt "androidx.room:room-compiler:$versions.roomVersion"
     // Room RxJava Support for Room
-    implementation 'androidx.room:room-rxjava2:2.2.6'
-    implementation "com.github.akarnokd:rxjava3-bridge:3.0.0"
-
+    implementation "androidx.room:room-rxjava3:$versions.roomVersion"
 
 
     // hilt
@@ -210,6 +208,7 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:$versions.okhttpVersion"
     implementation "com.google.code.gson:gson:${versions.gsonVersion}"
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8"
+    implementation "com.github.akarnokd:rxjava3-bridge:3.0.0"
     // moshi
     implementation "com.squareup.moshi:moshi-kotlin:$versions.moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshiVersion"
@@ -250,8 +249,6 @@ dependencies {
     implementation "androidx.mediarouter:mediarouter:$versions.mediarouter"
 
     // Anko
-    api "org.jetbrains.anko:anko:$versions.anko_version"
-    api "org.jetbrains.anko:anko-constraint-layout:$versions.anko_version"
-
-
+    //api "org.jetbrains.anko:anko:$versions.anko_version"
+    //api "org.jetbrains.anko:anko-constraint-layout:$versions.anko_version"
 }
