--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,7 @@ ext.versions = [
         kotlin_version         : '1.4.20',
 
         lifecycleVersion       : '2.2.0',
-        roomVersion            : '2.3.0-alpha03',
+        roomVersion            : '2.3.0',
         dagger                 : '2.30.1',
         espresso               : '3.0.2',
 
