--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,9 @@ plugins {
     // kotlin-parcelize,自动化处理序列化生成
 }
 // java和kotlin混合开发 使用Dagger 需要在目标build.gradle(module)的最后添加下面代码，现在为主Module，暂时用不到
-/*kapt {
-    generateStubs = true
-}*/
+// kapt {
+//    generateStubs = true
+// }
 
 // 上面的调用等同域 apply plugin: 'com.android.application'
 apply from: "$rootDir/dependencies.gradle"
@@ -163,12 +163,9 @@ dependencies {
      */
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
-    //implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation "androidx.paging:paging-runtime:2.1.2"
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     // Reactive Programming,异步编程
     implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroidVersion}"
     implementation "io.reactivex.rxjava3:rxjava:${versions.rxjavaVersion}"
