--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,6 +166,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation "androidx.paging:paging-runtime:2.1.2"
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
     // Reactive Programming,异步编程
     implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroidVersion}"
     implementation "io.reactivex.rxjava3:rxjava:${versions.rxjavaVersion}"
@@ -249,9 +253,6 @@ dependencies {
     implementation "com.google.android.exoplayer:extension-mediasession:$versions.exoplayerversion"
     // 投屏 ，使用公共用户界面在远程接收器设备上启用媒体显示和播放
     implementation "androidx.mediarouter:mediarouter:$versions.mediarouter"
-    // Anko,Kotlin的动态布局库
-    // api "org.jetbrains.anko:anko:$versions.anko_version"
-    // api "org.jetbrains.anko:anko-constraint-layout:$versions.anko_version"
 
     // 测试相关
     testImplementation 'junit:junit:4.13'
