--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,34 +11,24 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppPlexTheme"
         android:usesCleartextTraffic="true">
         <!-- parentActivityName:为了左上角给子Activity加一个返回按钮-->
-        <activity
+        <!--<activity
             android:name=".app.plex.ui.MediaDetailsActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true"
             android:launchMode="singleTop"
-            android:parentActivityName=".app.plex.ui.PlexMainActivity" />
-        <!--
-        <activity
-            android:name=".app.material.owl.ui.OwlMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:parentActivityName=".app.plex.ui.PlexMainActivity" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".app.pokemon.ui.PokedexMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        -->
         <activity
             android:name=".app.plex.ui.PlexSplashActivity"
             android:theme="@style/SplashTheme">
