--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun Jul 25 16:59:16 CST 2021
+#Wed Apr 20 10:55:29 CST 2022
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx1024M -Dkotlin.daemon.jvm.options\="-Xmx1024M"
 android.useAndroidX=true
 android.enableJetifier=true
