--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ plugins {
     // kotlin-kapt -> kotlin注解处理器插件,以AAC系列库的注解使用都依赖这东西
     // kotlin-parcelize -> 自动化处理序列化生成
 }
-apply plugin: StringCare // 字符串加密, 等同于 apply plugin: 'com.android.application'
+// ----  字符串加密, 等同于 apply plugin: 'com.android.application' ------
+apply plugin: StringCare
+// ---- 自定义Gradle插件测试 ------
 import com.onion.plugin.plugin.TestPlugin
 apply plugin: TestPlugin // 插桩测试
 // ------------------------------------------------------------------------
@@ -163,44 +165,39 @@ android {
 // ------------------------------------------------------------------------
 
 dependencies {
-    // 添加本地依赖库
+    // ---- 添加本地依赖库 ------
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
-    /**
-     * Kotlin标准库支持
-     * Kotlin代码需要使用的标准函数库，这里在对应的项目下引入标准库即可
-     * compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7" // 如果仅需要支持 JDK7的话，直接使用这个
-     * compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8" // 如果仅需要支持 JDK8版本的话
-     * 其他kotlin库 https://kotlinlang.org/docs/gradle.html
-     * https://kotlinlang.org/docs/coroutines-basic-jvm.html#async-returning-a-value-from-a-coroutine
-     */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin_version"
+    // ------------------------------------------------------------------------
+    // Kotlin标准库支持
+    // Kotlin代码需要使用的标准函数库，这里在对应的项目下引入标准库即可
+    // compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7" // 如果仅需要支持 JDK7的话，直接使用这个
+    // compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8" // 如果仅需要支持 JDK8版本的话
+    // 其他kotlin库 https://kotlinlang.org/docs/gradle.html
+    // https://kotlinlang.org/docs/coroutines-basic-jvm.html#async-returning-a-value-from-a-coroutine
+    // ------------------------------------------------------------------------
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation "androidx.paging:paging-runtime:2.1.2"
-    // coroutines
+    // ---- Kotlin 协程 ------
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
-    // Reactive Programming,异步编程
+    // ---- Reactive Programming,异步编程 ------
     implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroidVersion}"
     implementation "io.reactivex.rxjava3:rxjava:${versions.rxjavaVersion}"
-
-    // Dagger Core,依赖注入
+    // ---- Dagger Core,依赖注入 ------
     implementation "com.google.dagger:dagger:${versions.dagger}"
-    // kotlin 和 java 混合开发的情况需同时声明一下, java - annotationProcessor, kotlin - kapt
     annotationProcessor "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
-
-    // Dagger Android
+    // ---- Dagger Android ------
     implementation "com.google.dagger:dagger-android:${versions.dagger}"
     implementation "com.google.dagger:dagger-android-support:${versions.dagger}"
-    // kotlin 和 java 混合开发的情况需同时声明一下, java - annotationProcessor, kotlin - kapt
     annotationProcessor "com.google.dagger:dagger-android-processor:${versions.dagger}"
     kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
-
-    // AAC
+    // ---- Android Architecture Components(AAC) ------
     implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycleVersion"
@@ -208,11 +205,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$versions.roomVersion"
     implementation "androidx.room:room-ktx:$versions.roomVersion"
     kapt "androidx.room:room-compiler:$versions.roomVersion"
-    // Room RxJava Support for Room
+    // ---- Room RxJava Support for Room ------
     implementation "androidx.room:room-rxjava3:$versions.roomVersion"
-
-
-    // hilt,基于Dagger的依赖注入,现项目主用Dagger,所以这个暂时吃灰
+    // ---- Hilt,基于Dagger的依赖注入,现项目主用Dagger,所以这个暂时吃灰 ------
     implementation "com.google.dagger:hilt-android:$versions.hiltCoreVersion"
     implementation "androidx.hilt:hilt-common:$versions.hiltVersion"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.hiltVersion"
@@ -220,8 +215,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$versions.hiltVersion"
     androidTestImplementation "com.google.dagger:hilt-android-testing:$versions.hiltCoreVersion"
     kaptAndroidTest "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
-
-    // network
+    // ---- 网路请求 ------
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$versions.retrofitVersion"
@@ -230,11 +224,9 @@ dependencies {
     implementation "com.google.code.gson:gson:${versions.gsonVersion}"
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8"
     implementation "com.github.akarnokd:rxjava3-bridge:3.0.0"
-    // moshi
     implementation "com.squareup.moshi:moshi-kotlin:$versions.moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshiVersion"
-
-    // UI
+    // ----  UI控件库 ------
     implementation "com.github.skydoves:transformationlayout:$versions.transformationLayout"
     implementation "com.github.bumptech.glide:glide:$versions.glideVersion"
     implementation "com.github.florent37:glidepalette:$versions.glidePaletteVersion"
@@ -243,33 +235,31 @@ dependencies {
     implementation "com.github.skydoves:baserecyclerviewadapter:$versions.baseAdapter"
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.github.gmazzo:fontawesome:0.4'
-
-    // timber,日志打印库
+    // ---- Timber,日志输出库 ------
     implementation "com.jakewharton.timber:timber:$versions.timberVersion"
-    /**
-     * NetCipher: Secured Networking for Android
-     * https://dl.bintray.com/guardianproject/CipherKit/info/guardianproject/netcipher/netcipher/
-     * NetCipher是一个为android提供的库，它提供了多种手段来改善移动应用程序中的网络安全性(类似于洋葱，匿名代理)。
-     * 提供了最佳实践TLS设置使用标准Android HTTP方法，HttpURLConnection和Apache HTTP客户端，提供简单的Tor集成，使它很容易配置代理的HTTP连接和WebView实例。
-     * https://github.com/guardianproject/NetCipher
-     * - 加强TLS协议支持和密码套件，尤其是在旧版Android（例如4.4及更低版本）
-     * - 代理连接支持：通过特定配置对HTTP和HTTPS流量的HTTP和SOCKS代理连接支持
-     * - OrbotHelper：支持应用程序与Orbot（Android的Tor）集成的实用类。检查是否安装，自动启动等。
-     * - 可选的自定义证书存储，基于open Debian root CA trust store，它是用Mozilla的CA集合构建的
-     * - NetCipher还附带了一个helper库，它使webview的代理设置变得很简单
-     * */
+    // ------------------------------------------------------------------------
+    // NetCipher: Secured Networking for Android
+    // https://dl.bintray.com/guardianproject/CipherKit/info/guardianproject/netcipher/netcipher/
+    // NetCipher是一个为android提供的库，它提供了多种手段来改善移动应用程序中的网络安全性(类似于洋葱，匿名代理)。
+    // 提供了最佳实践TLS设置使用标准Android HTTP方法，HttpURLConnection和Apache HTTP客户端，提供简单的Tor集成，使它很容易配置代理的HTTP连接和WebView实例。
+    // https://github.com/guardianproject/NetCipher
+    // - 加强TLS协议支持和密码套件，尤其是在旧版Android（例如4.4及更低版本）
+    // - 代理连接支持：通过特定配置对HTTP和HTTPS流量的HTTP和SOCKS代理连接支持
+    // - OrbotHelper：支持应用程序与Orbot（Android的Tor）集成的实用类。检查是否安装，自动启动等。
+    // - 可选的自定义证书存储，基于open Debian root CA trust store，它是用Mozilla的CA集合构建的
+    // - NetCipher还附带了一个helper库，它使webview的代理设置变得很简单
+    // ------------------------------------------------------------------------
     implementation "info.guardianproject.netcipher:netcipher:$versions.netcipherVersion"
     implementation "info.guardianproject.netcipher:netcipher-okhttp3:$versions.netcipherOkhttpVersion"
     implementation "info.guardianproject.netcipher:netcipher-webkit:$versions.netcipherWebViewVersion"
-    // ExoPlayer
+    // ---- 视频播放器 ------
     implementation "com.google.android.exoplayer:exoplayer:$versions.exoplayerversion"
     implementation "com.google.android.exoplayer:extension-mediasession:$versions.exoplayerversion"
-    // 投屏 ，使用公共用户界面在远程接收器设备上启用媒体显示和播放
+    // ---- 投屏 ------
     implementation "androidx.mediarouter:mediarouter:$versions.mediarouter"
-    // 字符串加密 : https://github.com/StringCare/AndroidLibrary/wiki/Implementation
-    implementation "io.github.stringcare:library:$versions.stringcare_version"
-
-    // 测试相关
+    // ---- 字符串加密 : https://github.com/StringCare/AndroidLibrary/wiki/Implementation ------
+    implementation "io.github.stringcare:library:$versions.stringcareVersion"
+    // ---- 测试相关 ------
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
