--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,57 +1,60 @@
 ext.versions = [
 
-        // gradle plugins
+        // ---- Gradle plugins ------
         gradleBuildTool        : '4.1.1',
         spotlessGradle         : '5.8.2',
         versionPlugin          : '0.28.0',
 
-        // kotlin
-        kotlin_version         : '1.4.32',
-        // coroutines
+        // ---- Kotlin ------
+        kotlinVersion         : '1.4.32',
+        
+        // ---- Coroutines ------
         coroutinesVersion      : '1.5.2',
 
+        // ---- AAC ------
         lifecycleVersion       : '2.2.0',
         roomVersion            : '2.3.0',
         dagger                 : '2.30.1',
         espresso               : '3.0.2',
 
-        // hilt
+        // ---- Hilt ------
         hiltCoreVersion        : '2.31-alpha',
         hiltVersion            : '1.0.0-alpha02',
         assistedInjectVersion  : '0.5.2',
 
-        // network
+        // ---- Network ------
         retrofitVersion        : '2.9.0',
         okhttpVersion          : '4.9.0',
         gsonVersion            : '2.8.6',
 
-        // ui
+        // ---- UI ------
         transformationLayout   : '1.0.4',
         glideVersion           : '4.11.0',
         glidePaletteVersion    : '2.1.2',
         rainbowVersion         : '1.0.3',
         baseAdapter            : '0.1.3',
 
-        // debugging
+        // ---- Debugging ------
         timberVersion          : '4.7.1',
 
-        // moshi
+        // ---- Moshi ------
         moshiVersion           : '1.11.0',
         moshiConverterVersion  : '2.7.2',
 
-        // netcipher
+        // ---- NetCipher ------
         netcipherVersion       : '2.1.0',
         netcipherOkhttpVersion : '2.0.0-alpha1',
         netcipherWebViewVersion: '2.0.0-alpha1',
 
-        // ExoPlayer
+        // ---- ExoPlayer ------
         exoplayerversion       : '2.11.7',
         mediarouter            : '1.2.2',
 
-        // react programing
+        // ---- React Programing ------
         'rxandroidVersion'     : '3.0.0',
         'rxjavaVersion'        : '3.0.0',
-        // 加密
-        'stringcare_version'   : '4.2.1',
+        
+        // ---- 加密 ------
+        'stringcareVersion'   : '4.2.1',
 
 ]
