--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,17 +20,28 @@ plugins {
     // ------------------------------------------------------------------------
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'dagger.hilt.android.plugin'
+    //id 'dagger.hilt.android.plugin'
     // kotlin-android -> 使用Kotlin插件
     // kotlin-android-extensions-> 使用Kotlin Android扩展插件 ,像这个就可以直接实现DataBinding,废弃了，id混用，非常不好
     // kotlin-kapt -> kotlin注解处理器插件,以AAC系列库的注解使用都依赖这东西
     // kotlin-parcelize -> 自动化处理序列化生成
+    // id 'com.onion.versionplugin'
 }
-// ----  字符串加密, 等同于 apply plugin: 'com.android.application' ------
+// ------------------------------------------------------------------------
+// 字符串加密插件, 等同于 apply plugin: 'com.android.application'
+// ------------------------------------------------------------------------
 apply plugin: StringCare
+// ---- 字符串加密 默认配置 ------
+stringcare {
+    debug false
+    assetsFiles = ["*.json"]
+    stringFiles = ['strings.xml']
+    srcFolders = ['src/main']
+}
 // ---- 自定义Gradle插件测试 ------
 import com.onion.plugin.plugin.TestPlugin
-apply plugin: TestPlugin // 插桩测试
+// ---- 插桩测试 ------
+apply plugin: TestPlugin
 // ------------------------------------------------------------------------
 // java和kotlin混合开发 使用Dagger 需要在目标build.gradle(module)的最后添加下面代码，现在为主Module，暂时用不到
 // kapt {
@@ -38,16 +49,19 @@ apply plugin: TestPlugin // 插桩测试
 // }
 // ------------------------------------------------------------------------
 
-apply from: "$rootDir/dependencies.gradle"
-apply from: "$rootDir/config.gradle"
+// ---- Url配置 ------
+apply from: "$rootDir/plex_config.gradle"
 
-// default config
-stringcare {
-    debug false
-    assetsFiles = ["*.json"]
-    stringFiles = ['strings.xml']
-    srcFolders = ['src/main']
-}
+
+// ------------------------------------------------------------------------
+// 统一依赖管理方式
+// ---- 1. Kotlin + BuildSrc，支持双向跟踪，依赖更新时会重新构建整个项目 ------
+//import com.onion.plugin.dependencies.Deps
+// ---- 2. Groovy Ext,主要用这个 ------
+//apply from: "$rootDir/dependencies_manager.gradle"
+// ---- 3. Composing builds，支持单向跟踪，依赖更新时不会构建整个项目 ------
+//import com.onion.versionplugin.DependencyManager
+// ---- 4. Version Catalog ------
 
 android {
     compileSdkVersion 30
@@ -149,9 +163,9 @@ android {
     }
 
     // 添加当期Module目录下的libs路径的库
-    repositories {
-        flatDir {
-            dirs 'libs'
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -175,68 +189,86 @@ dependencies {
     // 其他kotlin库 https://kotlinlang.org/docs/gradle.html
     // https://kotlinlang.org/docs/coroutines-basic-jvm.html#async-returning-a-value-from-a-coroutine
     // ------------------------------------------------------------------------
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation "androidx.paging:paging-runtime:2.1.2"
+    implementation deps.kotlin.stdlibJdk8
     // ---- Kotlin 协程 ------
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
-    // ---- Reactive Programming,异步编程 ------
-    implementation "io.reactivex.rxjava3:rxandroid:${versions.rxandroidVersion}"
-    implementation "io.reactivex.rxjava3:rxjava:${versions.rxjavaVersion}"
-    // ---- Dagger Core,依赖注入 ------
-    implementation "com.google.dagger:dagger:${versions.dagger}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${versions.dagger}"
-    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
+    implementation deps.kotlin.coroutines_android
+
+    // ------------------------------------------------------------------------
+    // Android X
+    // ------------------------------------------------------------------------
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.core
+    implementation deps.androidx.core_ktx
+    implementation deps.androidx.material
+    implementation deps.androidx.constraint
+    // ---- 投屏 ------
+    implementation deps.androidx.mediarouter
+    implementation deps.androidx.paging
+    // ------------------------------------------------------------------------
+    // Google
+    // ------------------------------------------------------------------------
+    // ---- Dagger Core ------
+    implementation      deps.google.dagger
+    annotationProcessor deps.google.dagger_compiler
+    kapt                deps.google.dagger_compiler
     // ---- Dagger Android ------
-    implementation "com.google.dagger:dagger-android:${versions.dagger}"
-    implementation "com.google.dagger:dagger-android-support:${versions.dagger}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${versions.dagger}"
-    kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
-    // ---- Android Architecture Components(AAC) ------
-    implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$versions.lifecycleVersion"
-    implementation "androidx.room:room-runtime:$versions.roomVersion"
-    implementation "androidx.room:room-ktx:$versions.roomVersion"
-    kapt "androidx.room:room-compiler:$versions.roomVersion"
-    // ---- Room RxJava Support for Room ------
-    implementation "androidx.room:room-rxjava3:$versions.roomVersion"
+    implementation      deps.google.dagger_android
+    implementation      deps.google.dagger_android_support
+    annotationProcessor deps.google.dagger_android_processor
+    kapt                deps.google.dagger_android_processor
     // ---- Hilt,基于Dagger的依赖注入,现项目主用Dagger,所以这个暂时吃灰 ------
-    implementation "com.google.dagger:hilt-android:$versions.hiltCoreVersion"
-    implementation "androidx.hilt:hilt-common:$versions.hiltVersion"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.hiltVersion"
-    kapt "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
-    kapt "androidx.hilt:hilt-compiler:$versions.hiltVersion"
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$versions.hiltCoreVersion"
-    kaptAndroidTest "com.google.dagger:hilt-compiler:$versions.hiltCoreVersion"
-    // ---- 网路请求 ------
-    implementation "com.squareup.retrofit2:retrofit:$versions.retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$versions.retrofitVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$versions.okhttpVersion"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$versions.okhttpVersion"
-    implementation "com.google.code.gson:gson:${versions.gsonVersion}"
-    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8"
-    implementation "com.github.akarnokd:rxjava3-bridge:3.0.0"
-    implementation "com.squareup.moshi:moshi-kotlin:$versions.moshiVersion"
-    kapt "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshiVersion"
+    implementation      deps.google.hilt_android
+    implementation      deps.google.hilt_common
+    implementation      deps.google.hilt_lifecycle
+    kapt                deps.google.hilt_compiler_dagger
+    kapt                deps.google.hilt_compiler
+    // ---- 视频播放器 ------
+    implementation  deps.google.gson
+    implementation  deps.google.exoplayer
+    implementation  deps.google.exoplayer_extension
+
+    // ------------------------------------------------------------------------
+    //  Android Architecture Components(AAC)
+    // ------------------------------------------------------------------------
+    implementation deps.lifecycle.common
+    implementation deps.lifecycle.runtime
+    implementation deps.lifecycle.viewmodel
+    implementation deps.lifecycle.viewmodel_ktx
+    implementation deps.lifecycle.livedata
+    implementation deps.androidx.room
+    implementation deps.androidx.room_ktx
+    kapt           deps.androidx.room_compiler
+    // ---- Room RxJava Support for Room ------
+    implementation deps.androidx.room_rxjava3
+    // ------------------------------------------------------------------------
+    // Square Up
+    // ------------------------------------------------------------------------
+    implementation deps.square.retrofit
+    implementation deps.square.retrofit_converter_moshi
+    implementation deps.square.retrofit_converter_gson
+    implementation deps.square.okhttp3_logging
+    implementation deps.square.moshi
+    kapt           deps.square.moshi_kotlin
+    // ------------------------------------------------------------------------
+    // Github
+    // ------------------------------------------------------------------------
     // ----  UI控件库 ------
-    implementation "com.github.skydoves:transformationlayout:$versions.transformationLayout"
-    implementation "com.github.bumptech.glide:glide:$versions.glideVersion"
-    implementation "com.github.florent37:glidepalette:$versions.glidePaletteVersion"
-    kapt "com.github.bumptech.glide:compiler:$versions.glideVersion"
-    implementation "com.github.skydoves:rainbow:$versions.rainbowVersion"
-    implementation "com.github.skydoves:baserecyclerviewadapter:$versions.baseAdapter"
-    implementation 'me.relex:circleindicator:2.1.6'
-    implementation 'com.github.gmazzo:fontawesome:0.4'
-    // ---- Timber,日志输出库 ------
-    implementation "com.jakewharton.timber:timber:$versions.timberVersion"
+    implementation deps.github.glide
+    kapt           deps.github.glide_compiler
+    implementation deps.github.glide_palette
+    implementation deps.github.rainbow
+    implementation deps.github.transformation_layout
+    implementation deps.github.base_recyclerview_adapter
+    implementation deps.github.font_awesome
+    implementation deps.github.circle_indicator
+    // ---- Timber------
+    implementation deps.github.timber
+    // ---- Reactive Programming,异步编程 ------
+    implementation deps.github.rxjava3_android
+    implementation deps.github.rxjava3
+    // ---- Retrofit RxJava Adapter ------
+    implementation deps.github.rxjava3_retrofit_adapter
+    implementation deps.github.rxjava3_bridge
     // ------------------------------------------------------------------------
     // NetCipher: Secured Networking for Android
     // https://dl.bintray.com/guardianproject/CipherKit/info/guardianproject/netcipher/netcipher/
@@ -249,18 +281,16 @@ dependencies {
     // - 可选的自定义证书存储，基于open Debian root CA trust store，它是用Mozilla的CA集合构建的
     // - NetCipher还附带了一个helper库，它使webview的代理设置变得很简单
     // ------------------------------------------------------------------------
-    implementation "info.guardianproject.netcipher:netcipher:$versions.netcipherVersion"
-    implementation "info.guardianproject.netcipher:netcipher-okhttp3:$versions.netcipherOkhttpVersion"
-    implementation "info.guardianproject.netcipher:netcipher-webkit:$versions.netcipherWebViewVersion"
-    // ---- 视频播放器 ------
-    implementation "com.google.android.exoplayer:exoplayer:$versions.exoplayerversion"
-    implementation "com.google.android.exoplayer:extension-mediasession:$versions.exoplayerversion"
-    // ---- 投屏 ------
-    implementation "androidx.mediarouter:mediarouter:$versions.mediarouter"
+    implementation deps.github.netcipher
+    implementation deps.github.netcipher_okhttp
+    implementation deps.github.netcipher_webkit
     // ---- 字符串加密 : https://github.com/StringCare/AndroidLibrary/wiki/Implementation ------
-    implementation "io.github.stringcare:library:$versions.stringcareVersion"
-    // ---- 测试相关 ------
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation deps.github.stringcare
+    // ------------------------------------------------------------------------
+    // 测试相关
+    // ------------------------------------------------------------------------
+    implementation deps.test.junit
+    implementation deps.test.junit_android
+    implementation deps.test.espresso
 }
+apply from: "$rootDir/exclude_other_version.gradle"
