--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
         // ------------------------------------------------------------------------
         classpath  classpath.spotless
         classpath  classpath.string_care
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20'
     }
 }
 
