--- a/onionui/build.gradle
+++ b/onionui/build.gradle
@@ -34,4 +34,6 @@ android {
 
 dependencies {
     implementation deps.androidx.material
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.4.0'
 }
