--- a/onionui/build.gradle
+++ b/onionui/build.gradle
@@ -16,24 +16,66 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    // ---- 构建配置 ------
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            debuggable false
+            jniDebuggable false
+            shrinkResources true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    // ---- 设置用于编译Java兼容性 ------
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    // ---- Kotlin 对应 JVM ------
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    // ---- 多版本打包 https://www.codercto.com/a/11818.html ------
+    flavorDimensions "arm64"
+    productFlavors {
+        armv7 {
+            ndk {
+                abiFilters "armeabi-v7a"
+            }
+            ext {
+                abiVersionCode = 1
+            }
+        }
+        x86 {
+            ndk {
+                abiFilters "x86"
+            }
+            ext {
+                abiVersionCode = 2
+            }
+        }
+        arm64 {
+            ndk {
+                abiFilters "arm64-v8a"
+            }
+            ext {
+                abiVersionCode = 3
+            }
+        }
+        x64 {
+            ndk {
+                abiFilters "x86_64"
+            }
+            ext {
+                abiVersionCode = 4
+            }
+        }
     }
 }
 
 dependencies {
     implementation deps.androidx.material
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation deps.androidx.recyclerview
+    implementation deps.github.lottie
 }
