--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':onionui'
 // 包含的生成不与复合生成或其他包含的生成共享任何配置。每个包含的生成都是单独配置和执行的
 // ------------------------------------------------------------------------
 //includeBuild 'versionPlugin'
+include ':common-ui'
